discussion/kv_engine/128634/128634_rev26_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Introduce X-macro statistics definitions

With the introduction of Prometheus as a stats output, more information
is needed for each statistic. Rather than inline everything, stats can
now be declared in stats.def.h and referenced through the
cb::stats::StatKey enum.

Stats can be declared with:

 - units (e.g., microseconds)
 - metric family name
 - key-value labels

These new pieces of information are not used by the existing CBStats
output (but could be in the future). They are added to support
Prometheus stats. Before exposition, stats must be scaled to base units
(seconds, bytes - see https://prometheus.io/docs/practices/naming/ )
and appropriately suffixed.

Metric family names may be used to logically group stats which
represent variants of the same underlying stat. Rather than having
stats like "get_cmd" and "set_cmd" which are only identifiable as
related by the suffix convention, Prometheus can instead represent
these as two stats with the same metric name but different labels
(for example)

 cmd_time_taken_seconds{"op"="get"}
 cmd_time_taken_seconds{"op"="set"}

To do so, the stats could be declared as:

 STAT(get_cmd, microseconds, "cmd_time_taken", "op", "get")
 STAT(set_cmd, microseconds, "cmd_time_taken", "op", "set")

Note, the unit indicates the unit of the value tracked in kv_engine -
Prometheus exposition will _always_ scale the stat to the base unit
from whatever unit is provided - here the value would be divided by
10e6 to get a quantity in seconds.

Given the large number of existing stats, this functionality is all
opt-in for now. CBStats output will remain unchanged.

Change-Id: I3789681c1a35082a34c9ca90992a257f24a02f28

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-27 09:27:55.000000000
Message: 
Uploaded patch set 26.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-27 09:32:47.000000000
Message: 
Patch Set 26: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29813/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25842/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4352/ : ABORTED

Failure of a CTest test [2020-08-27T09:32:44.771Z]  13/410 Test #270: ep_testsuite_checkpoint.full_eviction.magma .................................................................Child terminated ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4352/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4352/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5330/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5330/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5432/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13150/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4021/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:68:2: error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
#error A STAT macro must be defined before including stats.def.h
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:6: error: use of undeclared identifier "bg_wait" [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:15: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:29: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:31: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:33: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:74:34: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                                 ^
                                 ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4021/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:68:2:
error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4021/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2547/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5240/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
